--- a/Lesson31-33/index.html
+++ b/Lesson31-33/index.html
@@ -12,12 +12,37 @@
 <body>
 <div>
     <div>
-        <select name="" id="selectRegion">
-            <option value="">请选择</option>
-            <option value="huadong">华东区</option>
-            <option value="huanan">华南区</option>
-            <option value="huabei">华北区</option>
-        </select>
+        <div>
+            <span>地区：</span>
+            <select name="" id="selectRegion">
+                <option value="">请选择</option>
+                <option value="huadong">华东</option>
+                <option value="huanan">华南</option>
+                <option value="huabei">华北</option>
+            </select>
+        </div>
+
+        <div>
+            <span>商品种类：</span>
+            <select name="" id="selectProduct">
+                <option value="">请选择</option>
+                <option value="phone">手机</option>
+                <option value="mac">笔记本</option>
+                <option value="audio">智能音箱</option>
+            </select>
+        </div>
+
+        <div>
+            <span>地区：</span>
+            <input id="allSelect" type="checkbox"><label for="allSelect">全选</label>
+            <div class="checkbox-wrapper" style="display: inline-block">
+                <input id="huadong" type="checkbox"><label for="huadong">华东</label>
+                <input id="huanan" type="checkbox"><label for="huanan">华南</label>
+                <input id="huabei" type="checkbox"><label for="huabei">华北</label>
+            </div>
+
+        </div>
+
     </div>
     <div>
         <table id="table">
