全选的修改

--- a/Lesson31-33/index.html
+++ b/Lesson31-33/index.html
@@ -34,8 +34,9 @@
 
         <div>
             <span>地区：</span>
-            <input id="allSelect" type="checkbox"><label for="allSelect">全选</label>
+
             <div class="checkbox-wrapper" style="display: inline-block">
+                <input id="allSelect" type="checkbox" data-type="all"><label for="allSelect">全选</label>
                 <input id="huadong" type="checkbox"><label for="huadong">华东</label>
                 <input id="huanan" type="checkbox"><label for="huanan">华南</label>
                 <input id="huabei" type="checkbox"><label for="huabei">华北</label>
