终于大功能都写完了 ，就剩bug没测试，还有代码需要优化。

--- a/Lesson31-33/index.html
+++ b/Lesson31-33/index.html
@@ -74,6 +74,10 @@
             </tbody>
         </table>
     </div>
+
+
+    <h4>bug:</h4>
+    <p>1. 当多选框只选择一个的时候，再次点击它，table会重新获取成全部数据</p>
 </div>
 
 <script src="js/data.js"></script>
